# py-scribblehub-to-epub

./: LICENSE  README.md  pyproject.toml  requirements.txt  test.py
py_scribblehub_to_epub/: epub.py  http.py  models.py  scribblehub.py
py_scribblehub_to_epub/assets/: scribblehub.css
py_scribblehub_to_epub/scripts/: make_epub.py
