[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py_scribblehub_to_epub"
version = "0.2.0"
authors = [{ name = "Amelia Meyer", email = "agmlego@gmail.com" }]
description = "Python project to make epub books from Scribblehub works"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'appdirs',
    'arrow',
    'beautifulsoup4',
    'Click',
    'EbookLib',
    'ftfy',
    'requests',
    'requests-cache',
    'rich',
]

[project.scripts]
make_epub = "py_scribblehub_to_epub.scripts.make_epub:cli"

[project.urls]
Homepage = "https://github.com/agmlego/py-scribblehub-to-epub"
Issues = "https://github.com/agmlego/py-scribblehub-to-epub/issues"
